<resources>
    <string name="app_name">Movies</string>
    <string name="error_message">An error has occurred</string>
    <string name="action_sort_popular">Most popular</string>
    <string name="action_sort_rating">Top rated</string>
    <string name="original_title">Original title</string>
    <string name="synopsis">Synopsis</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="movie_thumbnail">Movie thumbnail</string>
    <string name="unknown">Unknown</string>
    <string name="no_rating">No rating</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="action_sort_favorite">Favorite</string>
    <string name="no_results_message">0 results</string>
</resources>
